--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "dependencies": {},
   "devDependencies": {
-    
+    "babel-preset-es2015": "^6.18.0",
     "browser-sync": "^2.12.10",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-cssnano": "^2.1.2",
     "gulp-exec": "^2.1.2",
     "gulp-imagemin": "^3.0.1",
@@ -18,7 +19,6 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "run-sequence": "^1.2.1"
-    
   },
   "engines": {
     "node": ">=0.8.0"
