--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "simvis",
   "version": "0.1.0",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
+  },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "browser-sync": "^2.12.10",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
+    "gulp-browserify": "^0.5.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-exec": "^2.1.2",
     "gulp-imagemin": "^3.0.1",
@@ -18,7 +25,8 @@
     "gulp-sass": "^2.3.1",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
-    "run-sequence": "^1.2.1"
+    "run-sequence": "^1.2.1",
+    "semantic-ui-react": "^0.63.4"
   },
   "engines": {
     "node": ">=0.8.0"
