--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "simvis",
   "version": "0.1.0",
   "dependencies": {
+    "handsontable": "^0.30.1",
     "react": "^15.4.1",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-dropzone": "^3.9.2"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
