--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.4.1",
-    "react-dropzone": "^3.9.2"
+    "react-dropzone": "^3.9.2",
+    "semantic-ui-react-numberpicker": "0.0.1-b"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
