--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "handsontable": "^0.30.1",
     "react": "^15.4.1",
+    "react-color": "^2.11.1",
     "react-contextmenu": "^2.0.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
