--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.4.1",
     "react-dropzone": "^3.9.2",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
     "semantic-ui-react-numberpicker": "0.0.1-b"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "gulp-sass": "^2.3.1",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "redux-devtools": "^3.3.2",
     "run-sequence": "^1.2.1",
     "semantic-ui-react": "^0.63.4"
   },
