--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dropzone": "^3.9.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
+    "redux-undo": "^0.6.1",
     "semantic-ui-react-numberpicker": "0.0.1-b"
   },
   "devDependencies": {
@@ -36,7 +37,7 @@
     "gulp-util": "^3.0.7",
     "redux-devtools": "^3.3.2",
     "run-sequence": "^1.2.1",
-    "semantic-ui-react": "^0.63.4"
+    "semantic-ui-react": "^0.68.0"
   },
   "engines": {
     "node": ">=0.8.0"
