--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redux-devtools": "^3.3.2",
     "run-sequence": "^1.2.1",
     "semantic-ui-react": "^0.68.0",
+    "webpack-bundle-size-analyzer": "^2.7.0",
     "why-did-you-update": "0.0.8"
   },
   "engines": {
