Added output path to appspec

--- a/appspec.yml
+++ b/appspec.yml
@@ -1,6 +1,10 @@
 version: 0.0
 os: linux
 
+files:
+  - source: /
+    destination: /home/ubuntu/simvis
+
 hooks:
   BeforeInstall:
     - location: utility/before_install.sh
