--- a/appspec.yml
+++ b/appspec.yml
@@ -16,7 +16,7 @@ permissions:
 hooks:
   BeforeInstall:
     - location: utility/before_install.sh
-      runas: ubuntu
+      runas: root
   AfterInstall:
     - location: utility/after_install.sh
       runas: ubuntu
