--- a/appspec.yml
+++ b/appspec.yml
@@ -7,12 +7,11 @@ files:
 
 permissions:
   - object: /home/ubuntu/simvis/staticfiles
-    pattern: "**"
     owner: ubuntu
     group: ubuntu
     mode: 755
     type:
-      - file
+      - directory
 
 hooks:
   BeforeInstall:
