--- a/appspec.yml
+++ b/appspec.yml
@@ -8,8 +8,9 @@ files:
 permissions:
   - object: /home/ubuntu/simvis
     owner: ubuntu
-    group: ubuntu
     mode: 755
+    type:
+      - directory
 
 hooks:
   BeforeInstall:
